eliminate z-index on sidebar and header, so that they stop making undesirably low stacking contexts

--- a/pages/css/sampleboards.css
+++ b/pages/css/sampleboards.css
@@ -59,7 +59,6 @@
 #sidebar {
   display: flex;
   background-color: #f2f2f1;
-  z-index: 2;
   width: 80px;
   transition: background-color 0.5s, width 0.5s;
   animation: slideout 0.5s;
